arc_bluetooth_bridge: Ignore Bluetooth turn off request from Android

With the current architecture, there is no way to reliably tell whether
a request from Android to turn off Bluetooth comes from a user or from
Chrome OS. So it's proposed to ignore silently any request to turn off
Bluetooth from Android due to the following:
1. On Chrome OS, Android system settings for Bluetooth and Airplane Mode
   is disabled. So there is no way for user to turn off Bluetooth from
   Android system settings on Chrome OS.
2. The only applications that use Android API to turn off Bluetooth are
   power saving apps, which don't make sense on Chrome OS anyway.

Bug: 851097, 843650
Change-Id: I82c0d745fbd5b11437c05d827e79296ebe5bec5e
Reviewed-on: https://chromium-review.googlesource.com/1093465
Reviewed-by: Miao-chen Chou <mcchou@chromium.org>
Reviewed-by: Luis Hector Chavez <lhchavez@chromium.org>
Commit-Queue: Sonny Sasaka <sonnysasaka@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566185}
Former-commit-id: 90237eeebcc0d1d45a88532a96b4b4df28eca7be